<resources>
    <string name="app_name">PSP Mobile</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_information">Information</string>
    <string name="title_message">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="tutorial_step_1">1. Pastikan nomor whatsapp/ email anda terdaftar ke sistem, jika belum hubungi <font color='#2189FA'>Customer Service</font></string>
    <string name="tutorial_step_2">2. Masukan kode OTP berupa 5 digit kode yang sudah dikirim melalui whatsapp/ email anda</string>
    <string name="tutorial_step_3">3. Buat password baru dan konfirmasi password tersebut</string>
    <string name="tutorial_step_4">4. Silahkan login dengan Password Baru</string>
    <string name="syarat_1">1. Dalam satu hari reset password maksimal 3 kali</string>
    <string name="syarat_2">2. Jangka waktu pengulangan reset password 5 menit</string>
    <string name="terms_conditions">Syarat dan Ketentuan</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="butuh_bantuan_masuk_silahkan_hubungi">Butuh bantuan masuk? Silahkan hubungi</string>
    <string name="customer_service">Customer Service</string>
    <string name="didukung_oleh">Didukung oleh:</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi</string>
    <string name="tutorial_atur_ulang_password">Tutorial Atur Ulang Password</string>
    <string name="please_input_email_or_whatsapp">Silahkan Masukkan No. Whatsapp atau Email yang telah terdaftar</string>
    <string name="send_via_wa">Kirim Via Whatsapp</string>
    <string name="send_via_email">Kirim Via Email</string>
    <string name="send_otp">Kirim OTP</string>
    <string name="otp_sent">Kami telah mengirim 5 digit kode OTP. Silahkan masukan untuk mereset password anda</string>
    <string name="check_otp">Cek OTP</string>
    <string name="timer">Anda dapat mengirim ulang OTP dalam 05:00</string>
    <string name="resend_otp">Kirim Ulang OTP</string>
    <string name="input_new_password">Mohon masukkan password baru anda</string>
    <string name="new_password">Password Baru</string>
    <string name="confirm_new_password">Konfirmasi Password Baru</string>
    <string name="save">Simpan</string>
    <string name="create_password">Buat Password</string>
    <string name="digital_card">Kartu Digital</string>
    <string name="subtitle_intro_1">The ease of non-cash transaction payments is offered by digital cards, providing control over daily expenditures according to needs.</string>
    <string name="subtitle_intro_2">Your bill payment solution is provided practically.</string>
    <string name="subtitle_intro_3">Optimize presence, enhance education, and shape the future.</string>
    <string name="absensi">Absensi</string>
    <string name="digital_invoice">Tagihan Digital</string>
    <string name="memuat">Memuat…</string>
    <string name="input_name">Masukkan Nama Anda</string>
    <string name="input_institution">Masukkan Institusi Anda</string>
    <string name="input_message">Masukkan Pesan Anda</string>
    <string name="send">Kirim</string>
    <string name="cancel">Batal</string>
    <string name="dont_have_access">Anda tidak memiliki akses ke aplikasi ini</string>
    <string name="password_should_match">Pastikan kata sandi Anda cocok</string>
    <string name="must_a_valid_email">Mohon masukkan email yang valid</string>
    <string name="please_input_email_wa">Mohon masukkan email dan nomor whatsapp anda</string>
    <string name="password_should_valid">Pastikan kata sandi Anda lebih dari 6 karakter dan terdapat kombinasi angka dan huruf</string>
    <string name="press_back_to_exit">Tekan tombol kembali lagi untuk menutup aplikasi.</string>
    <string name="please_input_username_password">Mohon masukkan Username dan Password dahulu</string>
    <string name="login_with_new_password">Silahkan Login Menggunakan Password Baru</string>
    <string name="please_complete_form">Mohon lengkapi form dahulu</string>
    <string name="otp_need_spare_time">Anda baru saja melakukan permintaan reset password, mohon menunggu minimal 5 menit untuk mencoba lagi</string>
    <string name="otp_more_than_three_times">Anda telah melebihi batas harian (3 kali) percobaan reset password. Anda dapat mencoba lagi esok hari atau menghubungi Customer Service</string>
    <string name="please_otp_first">Mohon masukkan otp terlebih dahulu</string>
    <string name="username_password_wrong">Username atau password tidak sesuai</string>
    <string name="notification_channel_id">PSP Notif</string>
    <string name="update_available">Mohon Update Aplikasi ini Sekarang dan Nikmati Performa yang Lebih Baik.</string>
    <string name="app_not_available">Mohon maaf aplikasi ini saat ini tidak bisa digunakan karena telah kadaluarsa, silahkan update ke versi gratis untuk menggunakan layanan aplikasi ini. Terima Kasih.</string>
    <string name="download_free_version">Gunakan versi gratis</string>
    <string name="download_now">Unduh Sekarang</string>
    <string name="later">Nanti</string>
    <string name="close">Tutup</string>
    <string name="title_update">Update Tersedia</string>
    <string name="tooltip_username">Masukkan Username dengan format <b>kodesekolah.nis</b></string>
    <string name="tooltip_password">Masukkan password anda dengan NIS anda</string>
    <string name="tooltip_cs">Jika anda menemui masalah, anda dapat menghubungi Layanan Pelanggan</string>
    <string name="next">Selanjutnya</string>
    <string name="tooltip_email_wa">Masukan Email dan Nomor Whatsapp anda yang aktif</string>
    <string name="tooltip_new_password">Buat password baru sesuai keinginan anda untuk login kedalam Aplikasi</string>
    <string name="tooltip_confirm_password">Ketik ulang Password yang baru dibuat</string>
    <string name="institution_inactive">Institusi tidak aktif, silahkan hubungi pihak sekolah untuk informasi lebih lanjut.</string>
    <string name="update_now">Update Chrome Sekarang</string>
    <string name="announcement">Pemberitahuan</string>
    <string name="your_thanks_message">Terimakasih atas kerjasamanya</string>
    <string name="logo_desc">app_logo</string>
    <string name="ignore_choice_text">Demi Kenyamanan dan Keamanan akun anda , Apakah kata sandi akan diperbaharui?</string>
    <string name="data_user_confirmation">Konfirmasi Data Pengguna</string>
    <string name="data_user_confirmation_text">Pengguna wajib memasukan email dan nomor whatsapp</string>
    <string name="complete_below">Silahkan input data berikut</string>
    <string name="old_password">Kata Sandi Lama</string>
    <string name="change_password">Ubah Kata Sandi</string>
    <string name="skip">Lewati</string>
    <string name="new_password_changed">Kata Sandi baru berhasil diubah</string>
    <string name="home">Beranda</string>
    <string name="wrong_old_password">Kata Sandi Lama Tidak Sesuai</string>
    <string name="password_success_changed">Password Berhasil Diubah</string>
    <string name="faq_q_forgot_password">Lupa Password?</string>
    <string name="faq_a_forgot_password">Apabila lupa password bisa menggunakan fitur lupa password pada halaman awal aplikasi</string>
    <string name="faq_a_invoice_not_shown">Tagihan belum ada di aplikasi?</string>
    <string name="faq_a_pay_invoice">Untuk pembayaran tagihan dapat dilakukan dengan cara masuk ke menu Tagihan – Pilih Tagihan yang ingin dibayarkan – klik Bayar</string>
    <string name="faq_a_topup">Untuk tutorial top up terdapat pada menu Isi Ulang – Klik logo bank – klik Tutorial</string>
    <string name="faq_a_forgot_username">Apabila lupa username bisa menghubungi CS kami dengan cara klik Layanan Pelanggan</string>
    <string name="faq_q_forgot_username">Lupa Username?</string>
    <string name="faq_q_invoice_not_shown">Tagihan belum ada di aplikasi?</string>
    <string name="faq_q_pay_invoice">Bagaimana cara membayar tagihan?</string>
    <string name="faq_q_topup">Cara top up?</string>
    <string name="keterangan">Keterangan:</string>
    <string name="calendar_academic">Calendar Academic</string>
    <string name="login_with_fingerprint">Masuk dengan Sidik Jari</string>
    <string name="or">Atau</string>
    <string name="login">Masuk</string>
    <string name="username">Username</string>
    <string name="menu">Menu</string>
    <string name="balance">Saldo</string>
    <string name="history_topup">Riwayat Top Up</string>
    <string name="view_all">Lihat Semua</string>
    <string name="info_news">Info dan Berita</string>
    <string name="welcome">Welcome To</string>
    <string name="topup">Topup</string>
    <string name="support">Support</string>
    <string name="calendar">Academic Calendar</string>
    <string name="schedule">Schedule</string>
    <string name="donation">Donation</string>
    <string name="account">Account</string>
    <string name="attendance">Attendance</string>
    <string name="transaction">Transaction</string>
    <string name="detail_transaction">Detail Transaction</string>
    <string name="mutation">Mutation</string>
    <string name="invoice">Invoice</string>
    <string name="more">Others</string>
    <string name="unanswered">Kendala anda belum terjawab silahkan hubungi kami</string>
    <string name="help_center">Pusat Bantuan</string>
    <string name="explore_help_topics">Jelajahi topik bantuan</string>
    <string name="contact_us">Hubungi Kami</string>
    <string name="all_menu">Others Menu</string>
    <string name="name">Name</string>
    <string name="NIS">NIS</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="due_date">Due Date</string>
    <string name="invoice_type">Invoice Type</string>
    <string name="invoice_total">Invoice Total</string>
    <string name="invoice_paid">Invoice Paid</string>
    <string name="rest_of_invoice">Rest of Invoice</string>
    <string name="pay">Pay</string>
    <string name="previous">Previous</string>
    <string name="payment_data">Payment Data</string>
    <string name="parent_name">Parent Name</string>
    <string name="student_name">Student Name</string>
    <string name="detail_invoice">Detail Invoice</string>
    <string name="invoice_name">Invoice Name</string>
    <string name="invoice_status">Invoice Status</string>
    <string name="amount">Amount</string>
    <string name="invoice_due_date">Invoice Due Date</string>
    <string name="paid">Paid</string>
    <string name="minus">Minus</string>
    <string name="input_amount">Input Amount</string>
    <string name="minimum_payment">Minimum Payment Rp 10.000</string>
    <string name="pay_now">Pay Now\n</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="payment_success">Payment Success</string>
    <string name="description">Description</string>
    <string name="please_input_valid_email_or_phone">Mohon masukkan email atau nomor yang valid</string>
    <string name="wrong_username_password">Username atau Password salah</string>
    <string name="time">Time</string>
    <string name="lesson">Lesson</string>
    <string name="notification">Notifikasi</string>
    <string name="inbox">Kotak Masuk</string>
    <string name="broadcast">Broadcast</string>
    <string name="buka_url_terkait">Buka Url Terkait</string>
    <string name="buka_video_terkait">Buka Video Terkait</string>
    <string name="open">Buka</string>
    <string name="card_information">Information Card</string>
    <string name="maximum_limit">Maximum Accumulation Limit</string>
    <string name="daily_limit">Daily Limit</string>
    <string name="last_sync">Last Sync</string>
    <string name="card_menu">Card Menu</string>
    <string name="set_limit">Set Limit</string>
    <string name="sync_history">Sync History</string>
    <string name="help">Help</string>
</resources>