<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_bottom_home"
        android:title="@string/title_home"
        app:cnb_iconColor="@color/primary"/>

    <item
        android:id="@+id/navigation_information"
        android:icon="@drawable/ic_bottom_information"
        android:title="@string/title_information"
        app:cnb_iconColor="@color/primary" />
    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_bottom_message"
        android:title="@string/title_message"
        app:cnb_iconColor="@color/primary"/>
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_bottom_profile"
        android:title="@string/title_profile"
        app:cnb_iconColor="@color/primary"/>

</menu>