<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog"
    android:padding="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/customer_service"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="17dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/ed_name_cs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:hint="@string/input_name"
        android:textSize="14dp"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:visibility="gone"
        tools:visibility="visible"
        android:fontFamily="@font/montserrat"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="5dp"/>
    <EditText
        android:id="@+id/ed_institute_cs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:hint="@string/input_institution"
        android:textSize="14dp"
        android:imeOptions="actionNext"
        android:fontFamily="@font/montserrat"
        android:singleLine="true"
        android:visibility="gone"
        tools:visibility="visible"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="5dp"/>

    <EditText
        android:id="@+id/ed_message_cs"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@drawable/input_bg"
        android:hint="@string/input_message"
        android:textSize="14dp"
        android:imeOptions="actionDone"
        android:fontFamily="@font/montserrat"
        android:paddingHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:inputType="textMultiLine"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_button_red"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/cancel"
            android:textSize="14dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:background="@drawable/bg_button_blue"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/send"
            android:textSize="14dp" />
    </LinearLayout>
</LinearLayout>