<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/swipe_refresh_layout"
    android:layout_height="match_parent"
    tools:context=".ui.invoice.fragment.InvoiceFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/primary"
            android:orientation="horizontal"
            android:paddingVertical="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/invoice"
                android:textColor="@color/white"
                android:textSize="8dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/invoice_total"
                android:textColor="@color/white"
                android:textSize="8dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/invoice_paid"
                android:textColor="@color/white"
                android:textSize="8dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/rest_of_invoice"
                android:textColor="@color/white"
                android:textSize="8dp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_invoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/adapter_summary_invoice" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_invoice"
            android:layout_centerInParent="true">

            <Button
                android:id="@+id/btn_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/previous"
                android:textColor="@color/primary" />

            <Button
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:text="@string/next"
                android:textColor="@color/primary" />
        </LinearLayout>

        <!--    <ProgressBar-->
        <!--        android:id="@+id/progressbar"-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_centerInParent="true"-->
        <!--        android:visibility="gone"-->
        <!--        tools:visibility="visible"/>-->

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Retry"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tv_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_retry"
            android:layout_centerHorizontal="true"
            android:text="Data tidak ditemukan"
            android:visibility="gone"
            tools:visibility="visible" />

    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>