<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.invoice.InvoiceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:src="@drawable/arrow_left" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center"
                android:text="@string/digital_card"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            android:orientation="vertical">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/transparent" />

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:layout_width="match_parent"
                android:id="@+id/swipe_refresh"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginVertical="12dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/card_information" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:background="@color/white"
                        app:cardCornerRadius="14dp"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingVertical="12dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="14dp"
                                android:background="@color/white"
                                android:padding="6dp">

                                <TextView
                                    android:layout_width="200dp"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat"
                                    android:text="@string/maximum_limit" />

                                <TextView
                                    android:layout_width="10dp"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat"
                                    android:text=":" />

                                <TextView
                                    android:id="@+id/tv_batas_maks"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat"
                                    tools:text="Rp 10.0000" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="14dp"
                                android:background="@color/white"
                                android:padding="6dp">

                                <TextView
                                    android:layout_width="200dp"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat"
                                    android:text="@string/daily_limit" />

                                <TextView
                                    android:layout_width="10dp"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat"
                                    android:text=":" />

                                <TextView
                                    android:id="@+id/tv_batas_harian"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat"
                                    tools:text="Rp 10.0000" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="14dp"
                                android:background="@color/white"
                                android:padding="6dp">

                                <TextView
                                    android:layout_width="200dp"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat"
                                    android:text="@string/last_sync" />

                                <TextView
                                    android:layout_width="10dp"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat"
                                    android:text=":" />

                                <TextView
                                    android:id="@+id/tv_last_sync"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/montserrat"
                                    android:textSize="11dp"
                                    tools:text="12-02-2033 11-74" />

                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:layout_marginVertical="12dp"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@string/card_menu" />

                    <GridLayout
                        android:id="@+id/grid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="24dp"
                        android:columnCount="2"
                        android:useDefaultMargins="true">

                        <Button
                            android:id="@+id/btn_set_limit"
                            android:layout_width="120dp"
                            android:layout_height="58dp"
                            android:layout_columnWeight="1"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/white"
                            android:drawableLeft="@drawable/ic_setting_card"
                            android:fontFamily="@font/montserrat"

                            android:text="@string/set_limit"
                            android:textColor="@color/black" />

                        <Button
                            android:id="@+id/sync_history"
                            android:layout_width="120dp"
                            android:layout_height="58dp"
                            android:layout_columnWeight="1"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/white"
                            android:drawableLeft="@drawable/ic_synchronize_card"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/sync_history"

                            android:textColor="@color/black" />

                        <Button
                            android:id="@+id/btn_help"
                            android:layout_width="120dp"
                            android:layout_height="58dp"
                            android:layout_columnWeight="1"
                            android:layout_gravity="fill"
                            android:backgroundTint="@color/white"
                            android:drawableLeft="@drawable/ic_help_card"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/help"
                            android:textColor="@color/black" />

                    </GridLayout>
                </LinearLayout>
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        </LinearLayout>
    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Retry"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_retry"
        android:layout_centerHorizontal="true"
        android:text="Data tidak ditemukan"
        android:visibility="gone"
        tools:visibility="visible" />
</RelativeLayout>